2006-03-03  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Update to htmlArea RTE manual.
	* Fix bugtracker issue 1736: Make TS_CASE object and ts_parser support key value 0.

2006-03-03  Michael Stucki  <michael@typo3.org>

	* Added new feature: Merged Advanced BE Search form extension (Tools -> DB check). Written by Joey Hasenau - great work!
	* Added support to modify TypoScript values inside the TS parser using "lib.myVar := function(value)" - see "doc_core_ts" for more information.
	* Fixed bug #1364: t3lib_div::getURL() uses CURL only for HTTP protocol
	* Fixed bug #1153: tslib_cObj::imageLinkWrap() not passing information if image.imageLinkWrap.JSwindow.altUrl is set. Thanks to Peter Russ.
	* Fixed bug #2347: Wrong labels displayed
	* Fixed bug #1391: TYPO3 can't display a single "0" in a table cell

2006-03-03  Rene Fritz  <r.fritz@colorcube.de>

	* t3lib_stdGraphic: Check if a font exists and when not the text rendering will not be done and a debug() message will be shown.
	* alt_doc.php: Added a selector box for localization to the record editing form.
	* t3lib_tceforms: Added a new option "l10n_display" to have configuration options for form rendering and display of language overlay data.

2006-03-02  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #2716: Negative age wasn't generated correctly in FE

2006-03-01  Wolfgang Klinger  <wk@plan2.net>

	* Feature #1520: Allow to exclude the current page in HMENU / excludeUidList

2006-03-01  Ingmar Schlecht  <ingmar@typo3.org>

	* Made the update wizard of the install tool work with buttons instead of checkboxes

2006-02-28  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Enhance typolink.addQueryString and add addQueyString to HMENU with special=language (fix bug #2280)

2006-02-28  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug: admin panel doesn't stay on page (introduced by "Change admin panel to use get instead of post"